--- a/Project_WebDev/pages/Hot_Destination.html
+++ b/Project_WebDev/pages/Hot_Destination.html
@@ -65,55 +65,48 @@
       </div>
     </nav>
     <!--Isian-->
-    <section class="showcase">
-      <div class="container-fluid p-0">
-          <div class="row g-0" style="padding-top: 50px;">
-              <div class="col-lg-6 order-lg-2 text-white showcase-img"><img src="../Gambar/Pemandian Air Panas.jpg" height="420px" class="rounded-3 w-100"></div>
-              <div class="col-lg-6 order-lg-1 my-auto showcase-text" style="padding-left: 25px;">
-                  <h2 class="ps-2 text-md-center fw-bold">Pemandian Air Panas Way Belerang</h2>
-                  <hr class="dropdown-divider">
-                  <p class="lead mb-0">Way Belerang merupakan sebuah tempat pemandian air panas di lereng Gunung Rajabasa, Lampung Selatan, Provinsi Lampung. Suasana alamnya sangat sejuk dan alami yang dipenuhi dengan pepohonan besar.
-                    Di tempat ini pengunjung bisa melakukan relaksasi dengan berendam di air panas yang dipercaya bisa menyembuhkan penyakit rematik, gatal gatal, penyakit kulit lainnya. Sesuai namanya, air panas di Way Belerang memang bercampur belerang. Oleh karena itu, warga yang datang ke sini bukan hanya untuk berwisata semata, banyak juga yang berbasah ria sambil melakukan terapi penyakit kulit, rematik dan sebagainya.
-                    Yang menarik, di way Belerang juga ada taman bermain untuk anak-anak, bahkan ada fasilitas kolam renang air tawar dan flying fox, balai pertemuan, arena bermain, kantin, delman lengkap dengan kudanya dan arena taman terbuka.
-                  </p>
-              </div>
-          </div>
-          <div class="row g-0">
-              <div class="col-lg-6 text-white showcase-img"><img src="../Gambar/Pulau Tegal Mas.jpeg" height="420px" class="rounded-3 w-100 float-end"></div>
-              <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
-                  <h2 class="ps-2 text-md-center fw-bold">Pulau Tegal Mas</h2>
-                  <hr class="dropdown-divider">
-                  <p class="lead mb-0 ps-2">Pulau Tegal Mas merupakan sebuah kawasan wisata yang terletak di Pulau Tegal, Kecamatan Teluk Pandan, Kabupaten Pesawaran, Lampung. Banyak yang menyebutnya mirip dengan Maladewa, karena eksotisme alam & penginapan terapung yang ada di sekelilingnya.
-                    Pulau Tegal Mas seolah telah menjadi magnet yang memikat hati para wisatawan sejak perkembangan akhirnya pada tahun 2017. Tak sebatas turis domestik, destinasi wisata yang berdiri di atas lahan seluas 113 Ha ini juga mulai dilirik oleh wisatawan dari berbagai negara.
-                    Kekayaan biodiversitas yang dimiliki Pulau Tegal Mas, terutama alam bawah lautnya, dinilai tak kalah dengan lokasi lain di Indonesia. Sangat cocok untuk dieksplor setiap orang yang gemar melakukan aktivitas snorkeling atau diving.
-                  Disini wisatawan akan dimanjakan dengan keindahan berbagai biota laut, mulai dari terumbu karang, anemon, hingga berbagai jenis ikan yang menjadi penghuninya.
-                  Sebagai sarana penunjang, tersedia pula dive center serta snorkeling center yang bisa dimanfaatkan pengunjung untuk informasi dan penyediaan peralatan penyelaman.
-                  </p>
-              </div>
-          </div>
-          <div class="row g-0">
-            <div class="col-lg-6 order-lg-2 text-white showcase-img"><img src="../Gambar/Pulau-Pahawang-Lampung.jpg" height="420px" class="rounded-3 w-100"></div>
-            <div class="col-lg-6 order-lg-1 my-auto showcase-text" style="padding-left: 25px;">
-                <h2 class="text-md-center fw-bold">Pulau Pahawang</h2>
-                <hr class="dropdown-divider">
-                <p class="lead mb-0">Pulau Pahawang adalah pulau yang terletak di Kecamatan Marga Punduh, Kabupaten Pesawaran, Lampung, Indonesia. Pulau ini memiliki sejuta pesona yang tidak kalah menarik dengan objek lainnya. Saat ini Pulau ini mulai sering dimasukkan dalam setiap penawaran paket wisata yang ada di Lampung. Paket wisata ke tempat ini menjamur, terbukti karena sudah sering ditawarkan oleh biro perjalanan wisata yang memanfaatkan pesona bawah lautnya sebagai daya tarik yang sering ditawarkan pada wisatawan negeri maupun mancanegara.
-                  Pulau Pahawang memiliki sejuta pesona yang tidak kalah menarik dengan objek lainnya. Pulau ini sering dimasukkan dalam setiap penawaran paket wisata yang ada di Lampung. Paket wisata ke tempat ini menjamur, terbukti karena sudah sering ditawarkan oleh biro perjalanan wisata yang memanfaatkan pesona bawah lautnya sebagai daya tarik yang sering ditawarkan pada wisatawan negeri maupun mancanegara.</p>
-            </div>
-        </div>
+    <div class="list-group">
+      <a href="#" class="list-group-item list-group-item-action mx-0 mt-5" aria-current="true">
         <div class="row g-0">
-          <div class="col-lg-6 text-white showcase-img"><img src="../Gambar/Taman Nasional Way Kambas.jpg" height="420px" class="rounded-3 w-100 float-end"></div>
+          <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/Pemandian Air Panas.jpg" height="300px" width="450px" class="rounded-3 "></div>
+          <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
+              <h2 class="ps-2 text-md-center fw-bold">Pemandian Air Panas Way Belerang</h2>
+              <hr class="dropdown-divider">
+              <p class="lead mb-0 text-break ps-2">Way Belerang merupakan sebuah tempat pemandian air panas di lereng Gunung Rajabasa, Lampung Selatan, Provinsi Lampung. Suasana alamnya sang...</p>
+          </div>
+         </div>
+      </a>
+      <a href="#" class="list-group-item list-group-item-action mx-0 " aria-current="true">
+        <div class="row g-0">
+          <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/Pulau Tegal Mas.jpeg" height="300px" width="450px" class="rounded-3 "></div>
+          <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
+              <h2 class="ps-2 text-md-center fw-bold">Pulau Tegal Mas</h2>
+              <hr class="dropdown-divider">
+              <p class="lead mb-0 text-break ps-2">Pulau Tegal Mas merupakan sebuah kawasan wisata yang terletak di Pulau Tegal, Kecamatan Teluk Pandan, Kabupaten Pesawaran, Lampung. Banyak yan...</p>
+          </div>
+         </div>
+      </a>
+      <a href="#" class="list-group-item list-group-item-action mx-0 " aria-current="true">
+        <div class="row g-0">
+          <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/Pulau-Pahawang-Lampung.jpg" height="300px" width="450px" class="rounded-3 "></div>
+          <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
+              <h2 class="ps-2 text-md-center fw-bold">Pulau Pahawang</h2>
+              <hr class="dropdown-divider">
+              <p class="lead mb-0 text-break ps-2">Pulau Pahawang adalah pulau yang terletak di Kecamatan Marga Punduh, Kabupaten Pesawaran, Lampung, Indonesia. Pulau ini memi...</p>
+          </div>
+         </div>
+      </a>
+      <a href="#" class="list-group-item list-group-item-action mx-0 " aria-current="true">
+        <div class="row g-0">
+          <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/Taman Nasional Way Kambas.jpg" height="300px" width="450px" class="rounded-3 "></div>
           <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
               <h2 class="ps-2 text-md-center fw-bold">Taman Nasional Way Kambas</h2>
               <hr class="dropdown-divider">
-              <p class="lead mb-0 ps-2">Selain sebagai tempat konservasi untuk melindungi satwa dari pemburuan, Taman Nasional sering kali menawakan pemandangan indah yang selalu diidam-idamkan oleh wisatawan. Termasuk Taman Nasional Way Kambas.
-                Sebagai tempat pelestarian gajah dan badak, taman nasional ini ada bertujuan untuk sarana konservasi dan zonasi berbagai fauna dari kepunahan. Selain itu juga sebagai sarana edukasi kepada wisatawan agar lebih cinta fauna dan melestarikannya.
-                Fasilitas dalam Taman Nasional ini sudah sangat memadai. Sarana dan prasarananya bisa dikatakan tersedia dan dikelola dengan baik.
-                Mulai dari penginapan, arena-arena wisata, pusat informasi, WC, dan mushola Selain pemandangan alamnya yang indah, tentu taman nasional ini memiliki banyak daya tarik yang menjadi keunikannya tersendiri. Terlebih lagi ikon gajah sumatranya, tentu binatang berukuran besar ini sangat menarik perhatian wisatawan.</p>
+              <p class="lead mb-0 text-break ps-2">Selain sebagai tempat konservasi untuk melindungi satwa dari pemburuan, Taman Nasional sering kali menawakan pemandangan indah yang selalu diidam-idamkan oleh wisa...</p>
           </div>
-      </div>
-
-      </div>
-  </section>
+         </div>
+      </a>
+    </div>
 
 
     <!--footer-->
