--- a/Project_WebDev/pages/Local_Cuisine.html
+++ b/Project_WebDev/pages/Local_Cuisine.html
@@ -65,48 +65,49 @@
       </div>
     </nav>
     <!--Isian-->
-    <section class="showcase">
-      <div class="container-fluid p-0">
-          <div class="row g-0" style="padding-top: 50px;">
-              <div class="col-lg-6 order-lg-2 text-white showcase-img"><img src="../Gambar/Gulai-Taboh.jpg" height="420px" class="rounded-3 w-100"></div>
-              <div class="col-lg-6 order-lg-1 my-auto showcase-text" style="padding-left: 25px;">
-                  <h2 class="text-md-center fw-bold">Gulai Taboh</h2>
-                  <hr class="dropdown-divider">
-                  <p class="lead mb-0">Makanan yang satu ini berasal dari Lampung Barat. Dalam bahasa setempat, gulai taboh berarti
-                     ‘hidangan sayur yang gurih’. Makanan ini memang terkenal sangat gurih. Hidangan ini berisikan sayuran-sayuran khas Lampung
-                      termasuk melinjo, kacang-kacangan, labu siam, dan ubi jalar yang dimasak dengan santan dan rempah-rempah. Masyarakat Lampung juga sering menghidangkan makanan ini dengan ikan dan udang agar menambah lebih citarasa.</p>
-              </div>
+    <div class="list-group">
+      <a href="#" class="list-group-item list-group-item-action mx-0 mt-5" aria-current="true">
+        <div class="row g-0">
+          <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/Tempoyang.jpg" height="300px" width="450px" class="rounded-3 "></div>
+          <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
+              <h2 class="ps-2 text-md-center fw-bold">Tempoyang</h2>
+              <hr class="dropdown-divider">
+              <p class="lead mb-0 text-break ps-2">Di beberapa tempat lain di Sumatra, orang-orang menyebutnya tempoyak. Tempoyang adalah durian yang difermentasi yang memiliki rasa yang sangat asam. Ferment...</p>
           </div>
-          <div class="row g-0">
-              <div class="col-lg-6 text-white showcase-img"><img src="../Gambar/Tempoyang.jpg" height="420px" class="rounded-3 float-end w-100"></div>
-              <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
-                  <h2 class="ps-2 text-md-center fw-bold">Tempoyang</h2>
-                  <hr class="dropdown-divider">
-                  <p class="lead mb-0 text-break ps-2">Di beberapa tempat lain di Sumatra, orang-orang menyebutnya tempoyak. Tempoyang adalah durian yang difermentasi yang memiliki rasa yang sangat asam. Fermentasi dilakukan selama 2 hingga dengan 5 hari, setelah daging buah durian ditambahkan dengan garam dan cabe rawit di lemari pendingin. Hal itu dilakukan untuk mempercepat prosesnya. Kemudian, hasil fermentasinya biasanya dijadikan sebagai bahan pembuat sambal, dengan cara ditambah campuran bawang merah, bawang putih, dan juga cabai merah, serta cabai rawit halus. Sebenarnya, tempoyang dapat dimakan langsung, namun banyak orang yang tidak tahan dengan aromanya yang berasal dari rasa asam hasil fermentasi. Beberapa orang mengkonsumsi tempoyang apa adanya. Kuliner tempoyang atau tempoyak ini juga terkenal di beberapa daerah luar Lampung dan Sumatra seperti Kalimantan, Jawa, dan bahkan di daerah Malaysia.</p>
-              </div>
+         </div>
+      </a>
+      <a href="#" class="list-group-item list-group-item-action mx-0 " aria-current="true">
+        <div class="row g-0">
+          <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/Gulai-Taboh.jpg" height="300px" width="450px" class="rounded-3 "></div>
+          <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
+              <h2 class="ps-2 text-md-center fw-bold">Gulai Taboh</h2>
+              <hr class="dropdown-divider">
+              <p class="lead mb-0 text-break ps-2">Makanan yang satu ini berasal dari Lampung Barat. Dalam bahasa setempat, gulai taboh berarti ‘hidangan sayur yang gurih’. Makan...</p>
           </div>
-          <div class="row g-0">
-              <div class="col-lg-6 order-lg-2 text-white showcase-img"><img src="../Gambar/Gabing.jpg"  height="420px" class="rounded-3 w-100"></div>
-              <div class="col-lg-6 order-lg-1 my-auto showcase-text" style="padding-left: 25px;">
-                  <h2 class="text-md-center fw-bold">Gabing</h2>
-                  <hr class="dropdown-divider">
-                  <p class="lead mb-0">Gabing merupakan makanan berbahan utama batang kelapa muda, dengan proses pembuatan yang relatif sederhana. Batang kelapa yang masih muda diiris memanjang, kemudian direbus dengan bumbu sesuai dengan selera pembuatnya.
-                     Lantaran penggunaan bahannya dari batang kelapa, sehingga membuat rasanya menjadi unik.
-                    Gabing biasanya disajikan berkuah, namun ada juga yang menyajikan gabing tanpa dengan kuah. Untuk pelengkap,
-                     biasanya ditambahkan daging, jamur, dan berbagai macam bahan lainnya, agar rasa kuliner gabing ini menjadi lebih kaya.</p>
-              </div>
+         </div>
+      </a>
+      <a href="#" class="list-group-item list-group-item-action mx-0 " aria-current="true">
+        <div class="row g-0">
+          <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/Gabing.jpg" height="300px" width="450px" class="rounded-3 "></div>
+          <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
+              <h2 class="ps-2 text-md-center fw-bold">Gabing</h2>
+              <hr class="dropdown-divider">
+              <p class="lead mb-0 text-break ps-2">Gabing merupakan makanan berbahan utama batang kelapa muda, dengan proses pembuatan yang relatif sederhana. Batang kelapa yang masih muda diiris memanj...</p>
           </div>
-          <div class="row g-0">
-            <div class="col-lg-6 text-white showcase-img"><img src="../Gambar/Seruit.jpg" height="420px" class="rounded-3 float-end w-100"></div>
-            <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
-                <h2 class="ps-2 text-md-center fw-bold">Seruit</h2>
-                <hr class="dropdown-divider">
-                <p class="lead mb-0 ps-2">Kuliner seruit ini terbuat dari ikan bakar, yang disajikan dengan berbagai macam sambal khas dari kota Bandar Lampung, misalnya sambal tempoyak udang dan sambal asam kembang.
-                  Seruit dapat menggunakan berbagai macam ikan, namun jenis ikan yang biasanya digunakan dalam kuliner ini adalah ikan sungai, contohnya ikan balide, ikan layis, dan ikan baung. Sayuran sering disajikan bersamaan dengan seruit sebagai lalapan.</p>
-            </div>
-        </div>
-      </div>
-  </section>
+         </div>
+      </a>
+      <a href="#" class="list-group-item list-group-item-action mx-0 " aria-current="true">
+        <div class="row g-0">
+          <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/Seruit.jpg" height="300px" width="450px" class="rounded-3 "></div>
+          <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
+              <h2 class="ps-2 text-md-center fw-bold">Seruit</h2>
+              <hr class="dropdown-divider">
+              <p class="lead mb-0 text-break ps-2">Kuliner seruit ini terbuat dari ikan bakar, yang disajikan dengan berbagai macam sambal khas dari kota Bandar Lampung, misalnya sam...</p>
+          </div>
+         </div>
+      </a>
+    </div>
+
 
     <!--footer-->
     <footer class="bd-footer py-1 mt-3 rounded-top" style="background-color:#00BFFF ;">
