--- a/Project_WebDev/pages/Local_Entertainment.html
+++ b/Project_WebDev/pages/Local_Entertainment.html
@@ -65,114 +65,68 @@
       </div>
     </nav>
     <!--Isian-->
-    <section class="showcase">
-      <div class="container-fluid p-0">
-          <div class="row g-0" style="padding-top: 50px;">
-              <div class="col-lg-6 order-lg-2 text-white showcase-img"><img src="../Gambar/lembah_hijau.jpg" height="420px" class="rounded-3 w-100"></div>
-              <div class="col-lg-6 order-lg-1 my-auto showcase-text" style="padding-left: 25px;">
-                  <h2 class="ps-2 text-md-center fw-bold">Lembah Hijau Lampung</h2>
-                  <hr class="dropdown-divider">
-                  <p class="lead mb-0">Taman Wisata Lembah Hijau merupakan Taman Wisata, dan Waterboom terbesar di Lampung. Lokasi ini merupakan pionir wisata alam yang ada di Bumi Ruwa Jurai yang tidak kalah dengan Kebun Binatang Ragunan di Jakarta Selatan atau Waterboom Lippo Cikarang sekalipun.
-                    Sejak dibuka pada April 2007 lalu, taman wisata alam buatan Lembah Hijau sudah menjadi tempat rekreasi favorit di Lampung. Tempat rekreasi alam yang menempati lahan seluas 30 hektar ini berada di Jalan Radin Imba Kesuma Ratu, Kampung Sukajadi, Sukadanaham, Tanjung Karang Barat, Bandar Lampung.
-                    Lembah hijau terdiri dari taman rekreasi dan kebun binatang mini. Berada di area perbukitan dihiasi lembah dan sungai kecil. Tidak berlebihan apabila taman rekreasi ini diberi nama Lembah Hijau. Taman hijau yang sejuk ini menawarkan banyak kesenangan dan hiburan bagi masyarakat Lampung dan khususnya bagi wisatawan dalam negeri yang datang ke Lampung.
-                   area yang luas, Taman Wisata Lembah Hijau menyediakan berbagai wahana hiburan variatif di antaranya adalah: taman satwa, kolam renang dan waterboom, Cinema 4D, Boom Boom Car, arena bermain sepak bola, kereta mini, dan lainnya.
-                  </p>
-              </div>
-          </div>
-          <div class="row g-0">
-              <div class="col-lg-6 text-white showcase-img"><img src="../Gambar/Waterpark-Lampung-Walk.-Foto-Gmap-Rizki-Adhi-Wijaya.jpg" height="420px" class="rounded-3 w-100 float-end"></div>
-              <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
-                  <h2 class="ps-2 text-md-center fw-bold">Lampung Walk</h2>
-                  <hr class="dropdown-divider">
-                  <p class="lead mb-0">Lampung Walk semakin menambah khazanah tempat wisata Lampung yang cocok sebagai objek wisata keluarga di saat liburan tiba.
-                    Area spot foto 3 dimensi Lampung Walk menjadi penegasan akan hal tersebut. Bahkan bisa dibilang sebagai salah – satu spot foto 3 dimensi pertama yang ada di Lampung.
-                    Namun, Lampung Walk bukan hanya sekedar berbicara tentang spot foto saja. Lampung Walk adalah tempat wisata yang memadukan konsep wisata alam terbuka, yang dikolaborasikan dalam satu kawasan yang sama dengan area olah raga, Water Boom, dan area food court untuk menikmati wisata kuliner di Lampung.
-                    Di sini juga ada Els Coffee, tempat ngopi anak muda di Bandar Lampung, asli punya orang Lampung dan kopinya asli kopi Lampung.
-                  </p>
-              </div>
-          </div>
-          <div class="row g-0">
-            <div class="col-lg-6 order-lg-2 text-white showcase-img"><img src="../Gambar/puncak-mas-lampung.jpg" height="420px" class="rounded-3 w-100"></div>
-            <div class="col-lg-6 order-lg-1 my-auto showcase-text" style="padding-left: 25px;">
-                <h2 class="ps-2 text-md-center fw-bold">Puncak Mas</h2>
-                <hr class="dropdown-divider">
-                <p class="lead mb-0">Puncak Mas Lampung menjadi pilihan terbaik bagi mereka yang sedang bingung mencari tempat hiburan di Lampung.
-                  Banyaknya kunjungan wisata ke Puncak Mas Lampung dikarenakan lokasinya berada di sebuah bukit, serta memiliki area yang tertata dengan baik, sehingga tersaji sebuah taman instagramable di atas ketinggian Kota Bandar Lampung.
-                  Selain itu, semua yang dibutuhkan untuk menunjang kenyamanan wisata para pengunjung tersaji lengkap di Puncak Mas Lampung, termasuk cottage, atau penginapan.
-                  Daya tarik yang pertama dari Puncak Mas Lampung adalah area utamanya berupa taman yang luas, yang tertata secara baik, serta memiliki konsep kekinian.
-                  Ada juga area food court, atau cafe yang menyajikan aneka macam makanan, dan minuman. Penataan cafe tersebut juga sangat baik, dan akan membuat nyaman pengunjung yang datang.
-                  Udara yang sejuk, suasana yang tenang, view alam yang menawan, serta dilengkapi dengan fasilitas yang baik adalah kenikmatan saat berada di lokasi tersebut.
-                </p>
-            </div>
-        </div>
+    <div class="list-group">
+      <a href="#" class="list-group-item list-group-item-action mx-0 mt-5" aria-current="true">
         <div class="row g-0">
-          <div class="col-lg-6 text-white showcase-img"><img src="../Gambar/Transmart Lampung.jpeg" height="420px" class="rounded-3 float-end w-100"></div>
+          <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/lembah_hijau.jpg" height="300px" width="450px" class="rounded-3 "></div>
+          <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
+              <h2 class="ps-2 text-md-center fw-bold">Lembah Hijau Lampung</h2>
+              <hr class="dropdown-divider">
+              <p class="lead mb-0 text-break ps-2">Taman Wisata Lembah Hijau merupakan Taman Wisata, dan Waterboom terbesar di Lampung. Lokasi ini merupakan pionir wisata alam yang ada di Bumi Ruwa Jurai yang ti...</p>
+          </div>
+         </div>
+      </a>
+      <a href="#" class="list-group-item list-group-item-action mx-0 " aria-current="true">
+        <div class="row g-0">
+          <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/Waterpark-Lampung-Walk.-Foto-Gmap-Rizki-Adhi-Wijaya.jpg" height="300px" width="450px" class="rounded-3 "></div>
+          <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
+              <h2 class="ps-2 text-md-center fw-bold">Lampung Walk</h2>
+              <hr class="dropdown-divider">
+              <p class="lead mb-0 text-break ps-2">Taman Wisata Lembah Hijau merupakan Taman Wisata, dan Waterboom terbesar di Lampung. Lokasi ini merupakan pionir wisata alam yang ada di Bumi Ruwa Jurai yang tidak kalah...</p>
+          </div>
+         </div>
+      </a>
+      <a href="#" class="list-group-item list-group-item-action mx-0 " aria-current="true">
+        <div class="row g-0">
+          <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/puncak-mas-lampung.jpg" height="300px" width="450px" class="rounded-3 "></div>
+          <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
+              <h2 class="ps-2 text-md-center fw-bold">Puncak Mas</h2>
+              <hr class="dropdown-divider">
+              <p class="lead mb-0 text-break ps-2">Puncak Mas Lampung menjadi pilihan terbaik bagi mereka yang sedang bingung mencari tempat hiburan di Lampung. ...</p>
+          </div>
+         </div>
+      </a>
+      <a href="#" class="list-group-item list-group-item-action mx-0 " aria-current="true">
+        <div class="row g-0">
+          <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/Transmart Lampung.jpeg" height="300px" width="450px" class="rounded-3 "></div>
           <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
               <h2 class="ps-2 text-md-center fw-bold">Transmart Lampung</h2>
               <hr class="dropdown-divider">
-              <p class="lead mb-0">Mengusung konsep yang menjadi ciri khas Transmart yaitu dengan mengkombinasikan antara berbelanja dengan hiburan, menjadi daya tarik sendiri bagi masyarakat yang ada di Bandar Lampung.
-                Kehadiran Transmart di Lampung ini adalah kabar gembira bagi para pecinta film di Bandar Lampung. Pasalnya saat ini tidak hanya ada di Mall Boemi Kedaton dan Mall Kartini saja, masyarakat juga bisa nonton di CGV Cinema Transmart Lampung.
-                Transmart memiliki ciri khas yang sangat menonjol dibandingkan dengan Hypermart lainnya, di mana Transmart mengkombinasikan antara kegiatan berbelanja dengan,  hiburan dan makanan.
-                Transmart Lampung juga memiliki Trans Studio Mini Lampung, yang merupakan fasilitas hiburan dan permainan yang menjadi Ikon dari Transmart. Aneka macam wahana yang disediakan di Trans Studio Mini Lampung diantaranya adalah Venture River, Bumper Car, Train Mini, New York Swing, Playground,  Sky Rider, dan juga Crazy Cab Coaster dengan tarif wahana berkisar antara 30 ribu sampai dengan 50 ribu rupiah.
-              </p>
+              <p class="lead mb-0 text-break ps-2">Mengusung konsep yang menjadi ciri khas Transmart yaitu dengan mengkombinasikan antara berbelanja dengan hiburan, menjadi daya tarik sendiri bagi masyarakat yang ada d...</p>
           </div>
-      </div>
-
-      </div>
-  </section>
+         </div>
+      </a>
+    </div>
 
 
-    <!--Footer-->
-    <footer class="bd-footer py-5 mt-5 rounded-top" style="background-color:#00BFFF ;">
-      <div class="container py-5">
-        <div class="row">
-          <div class="col-lg-3 mb-3">
-            <a class="d-inline-flex align-items-center mb-2 link-dark text-decoration-none" href="../index.html" aria-label="Liburan Yuk!">
-              <img src="../Gambar/Logo1.png" alt="" height="40px"style="background-color: rgb(255, 255, 255)" class="rounded-circle">
-              <span class="fs-5 fw-bold">  Liburan Yuk!</span>
-            </a>
-            <ul class="list-unstyled small">
-              <li class="mb-1 fw-bold">Project Webdevelop Kelas Sore Angkatan 2020 Universitas Tarumanegara.</li>
-              <li class="mb-1 fw-bold">Anggota :</li>
-              <li class="mb-1 fw-bold">Brian Wijaya_535200069</li>
-              <li class="mb-1 fw-bold">Erwin Surya Effendy_535200075</li>
-            </ul>
-          </div>
-          <div class="col-6 col-lg-2 mb-3 text-center">
-            <h5>Destination</h5>
-            <ul class="list-unstyled small">
-              <li>hal 1</li>
-              <li>hal 2</li>
-              <li>hal 3</li>
-            </ul>  
-          </div>
-          <div class="col-6 col-lg-2 mb-3 text-center">
-            <h5>Cuisine</h5>
-            <ul class="list-unstyled small">
-              <li>hal 1</li>
-              <li>hal 2</li>
-              <li>hal 3</li>
-            </ul>
-          </div>
-          <div class="col-6 col-lg-2 mb-3 text-center">
-            <h5>Entertainment</h5>
-            <ul class="list-unstyled small">
-              <li>hal 1</li>
-              <li>hal 2</li>
-              <li>hal 3</li>
-            </ul>  
-          </div>
-          <div class="col-6 col-lg-2 mb-3 text-center">
-            <h5>Lodging</h5>
-            <ul class="list-unstyled small">
-              <li>hal 1</li>
-              <li>hal 2</li>
-              <li>hal 3</li>
-            </ul>  
-          </div>
-        </div>
+
+   <!--footer-->
+   <footer class="bd-footer py-1 mt-3 rounded-top" style="background-color:#00BFFF ;">
+    <div class="container py-4">
+      <div class="col-lg-5">
+        <a class="d-inline-flex align-items-center mb-2 link-dark text-decoration-none" href="../index.html" aria-label="Liburan Yuk!">
+          <img src="../Gambar/Logo1.png" alt="" height="40px"style="background-color: rgb(255, 255, 255)" class="rounded-circle">
+          <span class="fs-5 fw-bold">  Liburan Yuk!</span>
+        </a>
+        <ul class="list-unstyled small">
+          <li class="mb-1 fw-bold">Project Webdevelop Kelas Sore Angkatan 2020 Universitas Tarumanegara.</li>
+          <li class="mb-1 fw-bold">Anggota :</li>
+          <li class="mb-1 fw-bold">Brian Wijaya_535200069</li>
+          <li class="mb-1 fw-bold">Erwin Surya Effendy_535200075</li>
+        </ul>
       </div>
-    </footer>
+    </div>
+  </footer>
   </body>
 
 </html>
