--- a/Project_WebDev/pages/Hot_Destination.html
+++ b/Project_WebDev/pages/Hot_Destination.html
@@ -66,7 +66,7 @@
     </nav>
     <!--Isian-->
     <div class="list-group">
-      <a href="#" class="list-group-item list-group-item-action mx-0 mt-5" aria-current="true">
+      <a href="HD/Wey belerang.html" class="list-group-item list-group-item-action mx-0 mt-5" aria-current="true">
         <div class="row g-0">
           <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/Pemandian Air Panas.jpg" height="300px" width="450px" class="rounded-3 "></div>
           <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
