--- a/Project_WebDev/pages/Local_Cuisine.html
+++ b/Project_WebDev/pages/Local_Cuisine.html
@@ -96,7 +96,7 @@
           </div>
          </div>
       </a>
-      <a href="#" class="list-group-item list-group-item-action mx-0 " aria-current="true">
+      <a href="LC/Seruit.html" class="list-group-item list-group-item-action mx-0 " aria-current="true">
         <div class="row g-0">
           <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/Seruit.jpg" height="300px" width="450px" class="rounded-3 "></div>
           <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
